fixed alignment of ride type buttons

--- a/app/assets/stylesheets/pages/_routes_new.scss
+++ b/app/assets/stylesheets/pages/_routes_new.scss
@@ -1,6 +1,7 @@
-// .ride-type-item {
-//   display: inline-block;
-// }
+.ride-type-item {
+  display: inline-block;
+  align-items: space-between;
+}
 
 .ride-type-selector {
   position: absolute;
